# ore-miner-group

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  REDME.md  config.json.example  rust-toolchain.toml  script.lua.example
app/: Cargo.toml
app/src/: best_bus.rs  bundler.rs  config.rs  dynamic_fee.rs  main.rs  restful.rs
client/: Cargo.toml  build.rs
client/src/: container.rs  main.rs  manager.rs  stream.rs  thread.rs
gpu_test/: README.md
master/: Cargo.toml
master/src/: benchmark.rs  config.rs  lib.rs  lua.rs  main.rs  tests.rs
master/src/ore/: dynamic_fee.rs  mine.rs  miner.rs  mod.rs  open.rs  send_and_confirm.rs  utils.rs
master/src/websocket/: jito.rs  mediator.rs  messages.rs  mod.rs  scheduler.rs  server.rs  session.rs
server/: Cargo.toml
server/src/: main.rs  manager.rs  monitor.rs  restful.rs  routes.rs  user.rs  worker.rs
shared/: Cargo.toml
shared/src/: errors.rs  interaction.rs  jito.rs  lib.rs  log.rs  types.rs  utils.rs
shared/src/stream/: client.rs  mod.rs  server.rs
slave/: Cargo.toml
slave/src/: find_hash.rs  main.rs
static/: index.html
