[workspace]
members = ["shared","master","slave"]

[workspace.dependencies]
# solana
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"

# json
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }

# log
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing = "0.1.40"

clap = { version = "4.4.12", features = ["derive"] }

#ore
ore-api = "2.1.0"
ore-utils = "2.1.0"
drillx = "2.0.0"


