[workspace]
members = ["shared","master","slave"]

[workspace.dependencies]
clap = { version = "=4.5.9", features = ["derive"] }

# solana
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"

# json
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }

#ore
ore-api = "2.1.0"
ore-utils = "2.1.0"
drillx = "2.0.0"

# log
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing = "0.1.40"

# tokio
tokio = {version = "1.39.2"}
futures-util = { version = "0.3.30"}

bs58 = "0.5.1"
num_cpus = "1.16.0"
core_affinity = "0.8.1"
bincode = "1.3.3"
heim-cpu = "0.0.11"