[package]
name = "master"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mine-server"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
colored = "2.0"
cached = "0.46.1"
core_affinity = "0.8.1"
reqwest = { version = "0.12", features = ["json"] }
num_cpus = "1.16.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
    "no-entrypoint",
] }

# actix
actix = "0.13.3"
actix-web = "4.0.0"
actix-web-actors = "4.3.0"
actix-rt = "2.5.0"
actix-files = "0.6.5"
rand = "0.8.4"

tokio = { version = "1.35.1", features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot", "rt"] }

tracing-subscriber.workspace = true
tracing.workspace = true

# tokio
#tokio = { version = "1.35.1", features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot", "rt"] }
#tokio-tungstenite = "0.20.1"
#futures = "0.3.30"
#futures-util = "0.3.30"
#tokio-util = "0.7.10"

clap.workspace = true
serde_json.workspace = true

drillx.workspace = true
ore-api.workspace = true
ore-utils.workspace = true

solana-program.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-rpc-client.workspace = true
solana-transaction-status.workspace = true

common = { path = "../shared" }
serde = { version = "1.0.205", features = ["derive"] }
url = "2.5.2"
log = "0.4.22"




