[package]
name = "master"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mine-server"
path = "src/bin/server.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]

bs58.workspace = true
num_cpus.workspace = true
core_affinity.workspace = true
bincode.workspace = true

colored = "2.0"
cached = "0.46.1"
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.38"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "macros"] }

# actix
actix = "0.13.3"
actix-web = "4.0.0"
actix-web-actors = "4.3.0"
actix-rt = "2.5.0"
actix-files = "0.6.5"
awc = "3.2"

tokio = { workspace = true, features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot", "rt"] }
futures-util = { workspace = true, features = ["sink"] }

clap.workspace = true
serde_json.workspace = true
drillx_2 = { version = "1.0.0" }
drillx.workspace = true
ore-api.workspace = true
ore-utils.workspace = true

solana-program.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-rpc-client.workspace = true
solana-transaction-status.workspace = true

spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
    "no-entrypoint",
] }


tracing-subscriber.workspace = true
tracing.workspace = true

serde = { version = "1.0.205", features = ["derive"] }

url = "2.5.2"
log = "0.4.22"

lib_shared = { path = "../shared" }





