[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
colored = "2.0"
cached = "0.46.1"

core_affinity = "0.8.1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8.4"
num_cpus = "1.16.0"

spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
    "no-entrypoint",
] }

tracing-subscriber.workspace = true
tracing.workspace = true

clap.workspace = true

solana-program.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-rpc-client.workspace = true
solana-transaction-status.workspace = true

drillx.workspace = true
ore-api.workspace = true
ore-utils.workspace = true

serde_json.workspace = true
serde.workspace = true
log = "0.4.22"
