[package]
name = "slave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mine-client"
path = "src/main.rs"

[dependencies]
bs58 = "0.5.1"
awc = "3.2"
num_cpus = "1.16.0"
actix-web = "4.0.0"
tokio = { version = "1.35.1", features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot", "rt"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-stream = "0.1.15"
core_affinity = "0.8.1"

tracing.workspace = true
clap.workspace = true

drillx.workspace = true
ore-api.workspace = true
ore-utils.workspace = true

serde_json.workspace = true

common = { path = "../shared" }