[package]
name = "slave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mine-client"
path = "src/main.rs"

[dependencies]
bs58.workspace = true
num_cpus.workspace = true
core_affinity.workspace = true

awc = "3.2"
actix-web = "4.0.0"
tokio-stream = "0.1.15"

clap.workspace = true
drillx = { version = "1.0.0", package = "drillx_2" }
#drillx.workspace = true
ore-api.workspace = true
ore-utils.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "time", "sync", "rt-multi-thread", "signal", "parking_lot", "rt"] }
futures-util = { workspace = true, features = ["sink"] }

lib_shared = { path = "../shared" }
tracing.workspace = true